modified source file

--- a/UniversalAPIGateway/UniversalAPIGateway.vcxproj.filters
+++ b/UniversalAPIGateway/UniversalAPIGateway.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="UniversalAPIGateway.cpp">
+    <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
